--- a/build
+++ b/build
@@ -15,7 +15,8 @@ done
 cat >my-artifact.html <<EOF
 <html>
 <body>
-<h3>An example artifact</h3>
+<h3>An example artifact of ASH</h3>
+<h3> HI, WELCOME TO ASH WORLD </h3>
 <pre>
 ==== ==== ====
 An example artifact, created on: $(date)
